--- a/src/main/resources/templates/mail.html
+++ b/src/main/resources/templates/mail.html
@@ -4,14 +4,14 @@
 <body>
 <div style="margin:100px;">
   <h1> 안녕하세요.</h1>
-  <h1> 스파르타 코딩클럽 News Feed 입니다.</h1>
+  <h1> 스파르타 코딩클럽 NewsFeed 입니다.</h1>
   <br>
   <p> 아래 코드를 회원가입 창으로 돌아가 입력해주세요.</p>
   <br>
 
-  <div align="center" style="border:1px solid black; font-family:verdana;">
-    <h3 style="color:blue"> 회원가입 인증 코드 입니다. </h3>
-    <div style="font-size:130%" th:text="${code}"> </div>
+  <div align="center" style="border:1px solid black; padding:15px; font-family:verdana;">
+    <h3> 회원가입 인증 코드 </h3>
+    <div style="font-size:130%; color:darkred" th:text="${code}"> </div>
   </div>
   <br/>
 </div>
